--- a/src/admin/layout.css
+++ b/src/admin/layout.css
@@ -1,17 +1,18 @@
-#components-layout-demo-custom-trigger .trigger {
-    padding: 0 24px;
-    font-size: 18px;
-    line-height: 64px;
-    cursor: pointer;
-    transition: color 0.3s;
+.logo {
+    height: 38px;
+    width: 38px;
+    margin-right: 10px;
   }
-  
-  #components-layout-demo-custom-trigger .trigger:hover {
-    color: #1890ff;
-  }
-  
-  #components-layout-demo-custom-trigger .logo {
-    height: 32px;
-    margin: 16px;
-    background: rgba(255, 255, 255, 0.3);
-  }
+
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-space-between {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
